# node-event-storage

./: .gitignore  .readthedocs.yaml  .travis.yml  AGENTS.md  CNAME  LICENSE  README.md  event-storage-0.9.0.tgz  index.d.ts  index.js  mkdocs.yml  package-lock.json  package.json
.github/: copilot-instructions.md
bench/: .dcignore  bench-eventstore.js  bench-index.js  bench-matcher.js  bench-read-scenarios.js  bench-scalability.js  bench-storage-forked.js  bench-storage.js  package-lock.json  package.json
benchmarks/rust-mmap/: Cargo.toml  README.md
benchmarks/rust-mmap/src/: main.rs
concepts/: 2026-06-25-logical-streams-api.md  2026-06-27-dcb-query-compatibility-concept.md  2026-07-01-selector-dsl-analysis.md
docs/: advanced.md  api.md  architecture.md  changelog.md  consumers.md  dcb.md  getting-started.md  index.md  performance.md  pip-requirements.txt  streams.md  upgrading.md
event-storage-http/: README.md  package-lock.json  package.json
scripts/: bench-mmap-file.js
src/: AppendOnlyMmapedFile.js  Clock.js  CompositeProjection.js  Consumer.js  EventStore.js  EventStream.js  ExpectStream.js  FileHandlePool.js  Index.js  IndexEntry.js  IndexMatcher.js  IndexPool.js  JoinEventStream.js  MmapIndex.js  MmapPartition.js  Partition.js  PartitionPool.js  Projection.js  RawEventStream.js  Selector.js  Storage.js  Watcher.js  WatchesFile.js  fsUtil.js  metadataUtil.js  util.js
stress-test/: memory.js  memory.spec.js  package.json  recovery.js  run.sh  stress.spec.js  writer.js
test/: AppendOnlyMmapedFile.spec.js  Clock.spec.js  Consumer.spec.js  Index.spec.js  (+18 more)
(+65 files in other folders)
